<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_home"
            android:title="Inicio"
            android:visible="true" />
        <item
            android:id="@+id/busqueda"
            android:icon="@drawable/ic_busqueda"
            android:title="Busqueda"
            android:visible="true" />
        <item
            android:id="@+id/login"
            android:icon="@drawable/ic_login"
            android:title="@string/inicio_de_sesi_n_menu"
            android:visible="true" />
        <item
            android:id="@+id/registro"
            android:icon="@drawable/ic_registro"
            android:title="@string/registrarse_menu"
            android:visible="true" />
        <item
            android:id="@+id/subir_novela"
            android:icon="@drawable/ic_new_novela"
            android:title="@string/subir_novela"
            android:visible="false" />
        <item
            android:id="@+id/modificar"
            android:icon="@drawable/ic_modificar"
            android:title="Mis novelas"
            android:visible="false" />
        <item
            android:id="@+id/confUsuario"
            android:icon="@drawable/ic_configuracion"
            android:title="Configuración"
            android:visible="false" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/cerrar_sesi_n"
            android:visible="false" />
    </group>


</menu>