<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:text="@string/crear_cuenta"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:text="@string/usuario"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/CrearUsuario"
                android:layout_width="288dp"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:autofillHints=""
                tools:ignore="LabelFor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:text="@string/email"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/CrearEmail"
                android:layout_width="288dp"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:autofillHints=""
                tools:ignore="LabelFor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:text="@string/contrase_a_registro"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/CrearContrasena1"
                android:layout_width="288dp"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="textPassword"
                android:autofillHints=""
                tools:ignore="LabelFor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirmar_contrase_a"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/ConbContrasena1"
                android:layout_width="288dp"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="textPassword"
                android:autofillHints=""
                tools:ignore="LabelFor" />

        </LinearLayout>

        <Button
            android:id="@+id/bCrearCuenta"
            android:layout_width="288dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="40dp"
            app:backgroundTint="@color/purple_500"
            android:textColor="#FFFFFF"
            android:text="@string/crear_cuenta_registro" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/tienes_cuenta"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/RegistroInicio"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.981" />

            <Button
                android:id="@+id/InicioRegistro"
                android:layout_width="288dp"
                android:layout_height="wrap_content"
                app:backgroundTint="@color/purple_500"
                android:textColor="#FFFFFF"
                android:text="@string/bt_iniciar_sesi_n_registro"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.479"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.718" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>